feat:优化webpack4配置

--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --devtool eval --open --hot --compress --mode development --inline --profile --config config/webpack.dev.conf.js",
-    "build": "npm run buildClean  &&  webpack  --mode production --progress --color --config config/webpack.prod.conf.js  &&  npm run pack",
-    "analyz": "npm run buildClean  &&  webpack  --mode production --progress --color --profile --config config/webpack.prod.conf.js",
-    "dll": "npm run dllClean  &&  webpack  --mode production --profile --config config/webpack.dll.conf.js -p",
-    "buildClean": "rimraf ./dist",
-    "dllClean": "rimraf ./dll",
+    "build": "webpack  --mode production --progress --color --config config/webpack.prod.conf.js  &&  npm run pack",
+    "analyz": "webpack  --mode production --progress --color --profile --config config/webpack.prod.conf.js",
+    "dll": "webpack  --mode production --profile --config config/webpack.dll.conf.js -p",
     "pack": "node pack.js"
   },
   "keywords": [
@@ -31,7 +29,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cache-loader": "^1.2.2",
+    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
+    "cssnano": "^4.0.5",
     "css-loader": "^1.0.0",
     "extended-define-webpack-plugin": "^0.1.3",
     "file-loader": "^1.1.11",
@@ -40,10 +40,10 @@
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.1.6",
     "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.3",
-    "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
