--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --devtool eval --open --hot --compress --mode development --inline --profile --config config/webpack.dev.conf.js",
-    "build": "webpack  --mode production --progress --color --config config/webpack.prod.conf.js  &&  npm run pack",
-    "analyz": "webpack  --mode production --progress --color --profile --config config/webpack.prod.conf.js",
+    "build": "cross-env webpack  --mode production --progress --color --config config/webpack.prod.conf.js",
+    "analyzer": "cross-env ANALYZE=1 npm run build",
     "dll": "webpack  --mode production --profile --config config/webpack.dll.conf.js -p",
-    "pack": "node pack.js"
+    "static": "npm run build  &&  node ./staticServer/bin/www"
   },
   "keywords": [
     "mobx",
@@ -31,8 +31,9 @@
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
-    "cssnano": "^4.0.5",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.0.5",
     "extended-define-webpack-plugin": "^0.1.3",
     "file-loader": "^1.1.11",
     "happypack": "^5.0.0",
