--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "file-loader": "^1.1.11",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^0.14.3",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
+    "lint-staged": "^7.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.1.6",
