--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "less-loader": "^4.1.0",
     "lint-staged": "^7.2.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.1.6",
     "prop-types": "^15.6.2",
