--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -41,6 +42,15 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.5",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-compat": "^2.5.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-markdown": "^1.0.0-beta.6",
+    "eslint-plugin-react": "^7.11.0",
     "extended-define-webpack-plugin": "^0.1.3",
     "file-loader": "^1.1.11",
     "happypack": "^5.0.0",
@@ -48,14 +58,18 @@
     "husky": "^0.14.3",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^7.2.2",
     "mini-css-extract-plugin": "^0.4.1",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.1.6",
+    "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
+    "stylelint": "^9.4.0",
+    "stylelint-config-prettier": "^4.0.0",
+    "stylelint-config-standard": "^18.2.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.1",
@@ -66,7 +80,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-    "antd": "^3.7.0",
+    "antd": "^3.8.1",
     "classnames": "^2.2.6",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
