--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "babel-preset-stage-2": "^6.24.1",
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
+    "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.5",
+    "debug": "^3.1.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
@@ -51,15 +53,19 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-markdown": "^1.0.0-beta.6",
     "eslint-plugin-react": "^7.11.0",
+    "express": "^4.16.3",
     "extended-define-webpack-plugin": "^0.1.3",
     "file-loader": "^1.1.11",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-errors": "^1.7.0",
     "husky": "^0.14.3",
+    "jade": "^1.11.0",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "lint-staged": "^7.2.2",
     "mini-css-extract-plugin": "^0.4.1",
+    "morgan": "^1.9.0",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.1.6",
