--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "precommit": "npm run lint-staged",
-    "start": "webpack-dev-server --devtool eval --open --hot --compress --mode development --inline --profile --config config/webpack.dev.conf.js",
+    "start": "run-p dev server",
+    "dev": "webpack-dev-server --devtool eval --open --hot --compress --mode development --inline --profile --config config/webpack.dev.conf.js",
+    "server": "node ./middleware/server",
     "build": "cross-env webpack  --mode production --progress --color --config config/webpack.prod.conf.js",
     "analyzer": "cross-env ANALYZE=1 npm run build",
     "dll": "webpack  --mode production --profile --config config/webpack.dll.conf.js -p",
@@ -59,6 +61,7 @@
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-errors": "^1.7.0",
+    "http-proxy-middleware": "^0.19.0",
     "husky": "^0.14.3",
     "jade": "^1.11.0",
     "less": "^3.8.0",
@@ -66,6 +69,7 @@
     "lint-staged": "^7.2.2",
     "mini-css-extract-plugin": "^0.4.1",
     "morgan": "^1.9.0",
+    "npm-run-all": "^4.1.3",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.1.6",
