--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "http-errors": "^1.7.1",
     "http-proxy-middleware": "^0.19.0",
     "husky": "^0.14.3",
+    "image-webpack-loader": "^4.3.1",
     "jade": "^1.11.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
