--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "main": "index.js",
   "scripts": {
     "precommit": "npm run lint-staged",
-    "start": "run-p dev server",
     "dev": "webpack-dev-server --devtool eval --open --hot --compress --mode development --inline --profile --config config/webpack.dev.conf.js",
-    "server": "node ./middleware/server",
     "build": "cross-env webpack  --mode production --progress --color --config config/webpack.prod.conf.js",
     "analyzer": "cross-env ANALYZE=1 npm run build",
     "dll": "webpack  --mode production --profile --config config/webpack.dll.conf.js -p",
-    "static": "npm run build  &&  node ./staticServer/bin/www",
     "lint:style": "stylelint \"src/**/*.less\" --syntax less",
     "lint": "eslint --ext .js src && npm run lint:style",
     "lint:fix": "eslint --fix --ext .js src && npm run lint:style",
@@ -27,25 +24,22 @@
   "author": "Edlan",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.1.5",
-    "babel-core": "^6.26.0",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.9.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
-    "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
-    "debug": "^4.0.1",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
@@ -55,22 +49,17 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-markdown": "^1.0.0-beta.6",
     "eslint-plugin-react": "^7.11.1",
-    "express": "^4.16.3",
     "extended-define-webpack-plugin": "^0.1.3",
     "file-loader": "^2.0.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "http-errors": "^1.7.1",
-    "http-proxy-middleware": "^0.19.0",
     "husky": "^0.14.3",
-    "jade": "^1.11.0",
+    "image-webpack-loader": "^4.3.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lint-staged": "^7.3.0",
     "mini-css-extract-plugin": "^0.4.3",
-    "morgan": "^1.9.1",
     "npm-run-all": "^4.1.3",
-    "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.14.3",
@@ -94,11 +83,10 @@
     "classnames": "^2.2.6",
     "mobx": "^5.1.2",
     "mobx-react": "^5.2.8",
+    "path-to-regexp": "^2.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
-    "react-router": "^4.3.1",
-    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1"
   },
   "lint-staged": {
