--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "precommit": "npm run lint-staged",
-    "dev": "webpack-dev-server --devtool eval --open --hot --compress --mode development --inline --profile --config config/webpack.dev.conf.js",
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server --devtool eval --open --hot --compress --mode development --inline --profile --config config/webpack.dev.conf.js",
     "build": "cross-env webpack  --mode production --progress --color --config config/webpack.prod.conf.js",
     "analyzer": "cross-env ANALYZE=1 npm run build",
     "dll": "webpack  --mode production --profile --config config/webpack.dll.conf.js -p",
@@ -81,7 +81,7 @@
   "dependencies": {
     "antd": "^3.9.2",
     "classnames": "^2.2.6",
-    "mobx": "^5.1.2",
+    "mobx": "^4.5.2",
     "mobx-react": "^5.2.8",
     "path-to-regexp": "^2.4.0",
     "react": "^16.5.2",
