--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mobx-ssr-kit",
+  "name": "mobx-admin-kit",
   "version": "1.0.0",
-  "description": "webpack4 + Mobx + ReactSSR",
+  "description": "webpack4 + Mobx + React16",
   "main": "index.js",
   "scripts": {
     "precommit": "npm run lint-staged",
@@ -18,8 +18,9 @@
   },
   "keywords": [
     "mobx",
-    "react-ssr",
-    "webpack4"
+    "react16",
+    "webpack4",
+    "admin"
   ],
   "author": "Edlan",
   "license": "ISC",
@@ -103,6 +104,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 9"
+    "not ie < 9"
   ]
 }
