--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,12 @@
     ]
   ],
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ],
     "@babel/preset-react"
   ]
 }
