--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "author": "Edlan",
   "license": "ISC",
+  "sideEffects": false,
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.2",
@@ -80,14 +81,16 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "antd": "^3.9.2",
+    "antd": "^3.12.3",
     "classnames": "^2.2.6",
     "mobx": "^4.5.2",
     "mobx-react": "^5.2.8",
+    "moment": "^2.23.0",
     "path-to-regexp": "^2.4.0",
-    "react": "^16.5.2",
+    "react": "^16.7.0",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
+    "react-media": "^1.9.2",
     "react-router-dom": "^4.3.1"
   },
   "lint-staged": {
