--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
       "components": ["src/components"],
       "pages": ["src/pages"],
       "utils": ["src/utils"],
-      "constants": ["src/constants"]
+      "constants": ["src/constants"],
+      "store": ["src/store"]
     },
     "target": "ES6",
     "module": "es6",
