--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,6 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "theme.js"],
   "exclude": ["node_modules"]
 }
