--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "extended-define-webpack-plugin": "^0.1.3",
     "file-loader": "^2.0.0",
     "happypack": "^5.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "husky": "^0.14.3",
     "image-webpack-loader": "^4.3.1",
     "less": "^3.8.1",
